--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday Janelle</title>
@@ -147,4 +148,5 @@
     </button>
   </div>
 </body>
+
 </html>
