--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday Janelle</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   <style>
+    /* BODY */
     body {
       background-color: pink;
       color: white;
@@ -15,46 +16,41 @@
       padding: 0;
     }
 
+    /* CONTAINER */
     .container {
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      gap: 30px; /* space between columns */
+      gap: 30px;
       padding: 50px 20px;
+      flex-wrap: wrap; /* allow columns to wrap on small screens */
     }
 
+    /* COLUMNS */
     .column {
       display: flex;
       flex-direction: column;
-      gap: 20px; /* space between images or text */
+      gap: 20px;
+      flex: 1 1 150px; /* responsive shrinking */
+      max-width: 300px;
     }
 
     .column img {
-      width: 155px;
-      height: 175px;
+      width: 100%;       /* responsive images */
+      height: auto;
       border-radius: 10px;
       object-fit: cover;
     }
 
+    /* TEXT COLUMN */
     .text-column {
-      max-width: 300px;
+      max-width: 400px;
       text-align: center;
       font-size: 18px;
       line-height: 1.6;
     }
 
-    /* Optional: make it scroll nicely on mobile */
-    @media (max-width: 900px) {
-      .container {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .text-column {
-        margin: 30px 0;
-      }
-    }
-
+    /* IMAGE BUTTON */
     .img-btn {
       display: inline-block;
       margin: 50px auto;
@@ -65,26 +61,86 @@
     }
 
     .img-btn img {
-      width: 150px;
+      width: 80%;
+      max-width: 150px;
       height: auto;
     }
 
     .img-btn span {
       position: absolute;
-      top: 45%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
       font-weight: bold;
       pointer-events: none;
+      font-size: 4vw; /* responsive text */
+      white-space: nowrap;
+    }
+
+    /* TYPING EFFECT (Optional) */
+    #typing-text::after {
+      content: "|";
+      animation: blink 1s infinite;
+    }
+
+    @keyframes blink {
+      0% { opacity: 1; }
+      50% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    /* Responsive layout for tablets and phones */
+    @media (max-width: 900px) {
+      .container {
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 10px;
+        gap: 30px;
+      }
+
+      .text-column {
+        max-width: 90%;
+        font-size: 16px;
+        line-height: 1.5;
+      }
+
+      .column {
+        max-width: 90%;
+      }
+    }
+      .img-btn span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+  pointer-events: none;
+  font-size: 1.2rem; /* reasonable size for desktop & mobile */
+  max-width: 90%;    /* prevent overflow */
+  white-space: nowrap;
+  text-align: center;
+}
+
+    /* Extra small phones */
+    @media (max-width: 480px) {
+      .text-column {
+        font-size: 14px;
+        line-height: 1.4;
+      }
+      .img-btn span {
+        font-size: 6vw;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- Background music -->
   <audio id="bg-music" autoplay loop>
     <source src="somewhere only we know - rhianne (cover).mp3" type="audio/mpeg">
   </audio>
-  
+
   <div class="container">
     <!-- Left column -->
     <div class="column">
@@ -108,15 +164,14 @@
 
     <!-- Center text column -->
     <div class="column text-column">
-      <p style ="font-size: 24px;">Happy Birthday Janelle!! Time really flies 'no? Parang no'ng 2022 lang takot pa ako sayo HAHAHA. Simpleng "Ano name mo?", "Saang school ka galing?" turned into 4 years (and counting) of friendship.
-      <p style ="font-size: 24px;">Within those 4 years, you've not just been a good friend to me but also a good mother. MOTHER?! HAHAHHAH eme. Kidding aside teh, sobrang thankful ako na nakilala kita. Paulit-ulit ko 'tong sinsabi pero sasabihin ko ulit, I had nobody nung SHS pero you were there. I've never felt so heard and appreciated pag andyan presence mo huhuhu.</p>
-      <p style ="font-size: 23px;"> Minsan-madalas nga, namimiss ko yung mga panahon na seatmates pa tayo, random chikahan, random rant, manghusga ng tao, mag soundtrip and share ng earphones, bibili ng ice cream sa canteen, kumanta ng "I want it that way", and magkopyahan HAHAHAHA. Nakakamiss din yung mga panahon na ni-rragebait kita. Sana miss mo na rin na yung pikon mo, sa akin pa nanggagaling HAHAHAHA</p>
-      <p style ="font-size: 23px;">Thank you nga rin pala sa walang sawang pakikinig sa mga pointless, useless rants ko, o di kaya naman sa katorpehan ko na sana naman ay di ka nagsasawa HAHAHAHA</p>
-      <p style ="font-size: 23px;">ANYWAY, as you turn 20, I wish you nothing but the best in life, sa school, friends, social life, academics, sa mga profs niyo HAHAHA, sa love life mo ayieeeee. I wish na maging smooth and journey mo in life lalo na this 20s, a new chapter. Although we know that 20s era is going to be tough, just remember na andito ako and I'm ready to be a part of it.
-      </p>
-      <p style ="font-size: 23px;"> OH AND BTW, gusto kita paiyakin kaya ito yung music AHAHAHAHAHAHAAHAHAHHA LABYU TEHHH !!</p>
-      <p style ="font-size: 23px;"> Once again, Happy Birthday Janelle, Ane, Jaja !!</p>
-      <p style ="font-size: 22px;"> -Ruth</p>
+      <p style="font-size: 34px;">Happy Birthday Janelle!! Time really flies 'no? Parang no'ng 2022 lang takot pa ako sayo HAHAHA. Simpleng "Ano name mo?", "Saang school ka galing?" turned into 4 years (and counting) of friendship.</p>
+      <p style="font-size: 34px;">Within those 4 years, you've not just been a good friend to me but also a good mother. MOTHER?! HAHAHHAH eme. Kidding aside teh, sobrang thankful ako na nakilala kita. Paulit-ulit ko 'tong sinsabi pero sasabihin ko ulit, I had nobody nung SHS pero you were there. I've never felt so heard and appreciated pag andyan presence mo huhuhu.</p>
+      <p style="font-size: 34px;">Minsan-madalas nga, namimiss ko yung mga panahon na seatmates pa tayo, random chikahan, random rant, manghusga ng tao, mag soundtrip and share ng earphones, bibili ng ice cream sa canteen, kumanta ng "I want it that way", and magkopyahan HAHAHAHA. Nakakamiss din yung mga panahon na ni-rragebait kita. Sana miss mo na rin na yung pikon mo, sa akin pa nanggagaling HAHAHAHA</p>
+      <p style="font-size: 34px;">Thank you nga rin pala sa walang sawang pakikinig sa mga pointless, useless rants ko, o di kaya naman sa katorpehan ko na sana naman ay di ka nagsasawa HAHAHAHA</p>
+      <p style="font-size: 34px;">ANYWAY, as you turn 20, I wish you nothing but the best in life, sa school, friends, social life, academics, sa mga profs niyo HAHAHA, sa love life mo ayieeeee. I wish na maging smooth and journey mo in life lalo na this 20s, a new chapter. Although we know that 20s era is going to be tough, just remember na andito ako and I'm ready to be a part of it.</p>
+      <p style="font-size: 34px;">OH AND BTW, gusto kita paiyakin kaya ito yung music AHAHAHAHAHAHAAHAHAHHA LABYU TEHHH !!</p>
+      <p style="font-size: 34px;">Once again, Happy Birthday Janelle, Ane, Jaja !!</p>
+      <p style="font-size: 33px;">-Ruth</p>
     </div>
 
     <!-- Right column -->
@@ -140,13 +195,12 @@
     </div>
   </div>
 
-  <!-- Next button -->
+  <!-- Finish button -->
   <div style="text-align: center;">
-    <button class="img-btn" onclick="location.href='page3.html'">
+    <button class="img-btn" onclick="location.href='index.html'">
       <img src="pinkButton-removebg-preview.png" alt="">
       <span>Finish</span>
     </button>
   </div>
 </body>
-
 </html>
