Refactor page2.html for improved layout and design
Updated layout and styling for birthday page, added scrollable image columns.

--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday Janelle</title>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+
   <style>
     /* BODY */
     body {
@@ -14,56 +17,67 @@
       font-family: 'Pixelify Sans', sans-serif;
       margin: 0;
       padding: 0;
-    }
-
-    /* CONTAINER */
-    .container {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
+    }
+
+    /* MAIN CONTAINER */
+    .container {
+      display: flex;
+      flex-wrap: wrap;          /* stack columns on small screens */
+      justify-content: center;
+      max-width: 1200px;
       gap: 30px;
       padding: 50px 20px;
-      flex-wrap: wrap; /* allow columns to wrap on small screens */
     }
 
-    /* COLUMNS */
-    .column {
+    /* SCROLLABLE IMAGE COLUMNS */
+    .scroll-col {
       display: flex;
       flex-direction: column;
-      gap: 20px;
-      flex: 1 1 150px; /* responsive shrinking */
-      max-width: 300px;
+      gap: 15px;
+      max-height: 80vh;
+      overflow-y: auto;
+      flex: 1 1 200px;  /* responsive width */
+      min-width: 150px;
     }
 
-    .column img {
-      width: 100%;       /* responsive images */
+    .scroll-col img {
+      width: 100%;
       height: auto;
       border-radius: 10px;
       object-fit: cover;
+      display: block;
     }
 
     /* TEXT COLUMN */
     .text-column {
-      max-width: 400px;
+      max-width: 500px;
+      flex: 1 1 300px;
       text-align: center;
       font-size: 18px;
       line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 15px;
     }
 
     /* IMAGE BUTTON */
     .img-btn {
-      display: inline-block;
-      margin: 50px auto;
+      position: relative;
       background: none;
       border: none;
       cursor: pointer;
-      position: relative;
+      display: block;
+      margin: 30px auto 0 auto;
+      padding: 0;
     }
 
     .img-btn img {
-      width: 80%;
-      max-width: 150px;
+      width: 150px;
       height: auto;
+      display: block;
     }
 
     .img-btn span {
@@ -72,56 +86,47 @@
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
+      font-size: 16px;   /* fixed font size */
       font-weight: bold;
       pointer-events: none;
-      font-size: 4vw; /* responsive text */
+      text-align: center;
       white-space: nowrap;
     }
 
-    /* TYPING EFFECT (Optional) */
-    #typing-text::after {
-      content: "|";
-      animation: blink 1s infinite;
+    .img-btn:hover {
+      opacity: 0.85;
     }
 
-    @keyframes blink {
-      0% { opacity: 1; }
-      50% { opacity: 0; }
-      100% { opacity: 1; }
+    .img-btn:active {
+      transform: scale(0.95);
     }
 
-    /* Responsive layout for tablets and phones */
+    /* Responsive for tablets and phones */
     @media (max-width: 900px) {
       .container {
         flex-direction: column;
         align-items: center;
-        padding: 30px 10px;
-        gap: 30px;
       }
 
       .text-column {
         max-width: 90%;
         font-size: 16px;
-        line-height: 1.5;
       }
 
-      .column {
+      .scroll-col {
         max-width: 90%;
+        flex-direction: row;       /* horizontal scroll on small screens */
+        overflow-x: auto;
+        overflow-y: hidden;
+        gap: 10px;
+      }
+
+      .scroll-col img {
+        width: auto;
+        height: 120px;
+        flex: 0 0 auto;
       }
     }
-      .img-btn span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-weight: bold;
-  pointer-events: none;
-  font-size: 1.2rem; /* reasonable size for desktop & mobile */
-  max-width: 90%;    /* prevent overflow */
-  white-space: nowrap;
-  text-align: center;
-}
 
     /* Extra small phones */
     @media (max-width: 480px) {
@@ -129,8 +134,13 @@
         font-size: 14px;
         line-height: 1.4;
       }
+
+      .img-btn img {
+        width: 120px;
+      }
+
       .img-btn span {
-        font-size: 6vw;
+        font-size: 14px;
       }
     }
   </style>
@@ -143,7 +153,7 @@
 
   <div class="container">
     <!-- Left column -->
-    <div class="column">
+    <div class="scroll-col">
       <img src="me&Janelle (1).jpg" alt="">
       <img src="me&Janelle (2).jpg" alt="">
       <img src="me&Janelle (3).jpg" alt="">
@@ -175,7 +185,7 @@
     </div>
 
     <!-- Right column -->
-    <div class="column">
+    <div class="scroll-col">
       <img src="me&Janelle (7).jpg" alt="">
       <img src="me&Janelle (8).jpg" alt="">
       <img src="me&Janelle (9).jpg" alt="">
@@ -204,3 +214,4 @@
   </div>
 </body>
 </html>
+
